<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="welcome_title">Hello</string>
    <string name="instructions_title">Instructions</string>
    <string name="shoe_list_title">Shoe List</string>
    <string name="shoe_detail_title">Shoe Detail</string>
    <string name="signup_btn">Sign Up</string>
    <string name="login_btn">Login</string>
    <string name="password_input">Put Your Password here</string>
    <string name="email_input">Put Your Email here</string>
    <string name="instructions">To Instructions</string>
    <string name="welcome_content">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of \"de Finibus Bonorum et Malorum\" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, \"Lorem ipsum dolor sit amet..\", comes from a line in section 1.10.32.  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="letusgo">Let\'s Go</string>
    <string name="information_1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="information_2">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \"de Finibus Bonorum et Malorum\" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>

    <string name="empty_shoe_list">Empty  Shoes List</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_company">COMPANY: %s</string>
    <string name="shoe_size">SIZE: %.1f</string>
    <string name="shoe_description">DESCRIPTION: %s</string>

    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_detail_company">Company</string>
    <string name="shoe_detail_size">Size</string>
    <string name="shoe_detail_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_name">Name: %s</string>
    <string name="shoe_detail_name">Name</string>
    <string name="add_new_shoe">Add New Shoe</string>
    <string name="empty_alert">You Should To Fill All Fields</string>
    <string name="logout">Log Out</string>

</resources>
