<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.ShoeDetailScreen">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.viewmodel.ShoeDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_margin="30dp"
            android:text="@string/add_new_shoe"/>
        <EditText
            style="@style/InputStyleDetails"
            android:hint="@string/shoe_detail_name"
            android:id="@+id/shoe_name_input"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:text="@={viewModel.shoeName}" />


        <EditText
            style="@style/InputStyleDetails"
            android:id="@+id/shoe_company_input"
            android:inputType="text"
            android:hint="@string/shoe_detail_company"
            android:layout_width="match_parent"
            android:text="@={viewModel.shoeCompany}" />


        <EditText
            android:hint="@string/shoe_detail_size"
            style="@style/InputStyleDetails"
            android:id="@+id/shoe_size_input"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:text="@={viewModel.shoeSize}"/>



        <EditText
            style="@style/InputStyleDetails"
            android:id="@+id/shoe_description_input"
            android:inputType="text"
            android:hint="Description"
            android:layout_width="match_parent"
            android:text="@={viewModel.shoeDescription}"/>


        <Button
            android:id="@+id/save_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button"
            style="@style/ButtonStyle"/>
        <Button
            android:backgroundTint="@color/wight"
            android:id="@+id/cancel_button"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            />

    </LinearLayout>
</layout>