<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/app_navigation"
app:startDestination="@id/loginFragment">

<fragment
    android:id="@+id/loginFragment"
    android:label="@string/app_name"
    android:name="com.udacity.shoestore.screens.LoginScreen">
    <action
        android:id="@+id/action_loginFragment_to_welcomeFragment"
        app:destination="@id/welcomeFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
</fragment>
<fragment
    android:id="@+id/welcomeFragment"
    android:label="@string/welcome_title"
    android:name="com.udacity.shoestore.screens.WelcomOnboardingScreen">
    <action
        android:id="@+id/action_welcomeFragment_to_instructionsFragment"
        app:destination="@id/instructionsFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
</fragment>
<fragment
    android:id="@+id/instructionsFragment"
    android:label="@string/instructions_title"
    android:name="com.udacity.shoestore.screens.InstructionOnboardingScreen">
    <action
        android:id="@+id/action_instructionsFragment_to_shoeListFragment"
        app:destination="@id/shoeListFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/welcomeFragment"
        app:popUpToInclusive="true" />
</fragment>
<fragment
    android:id="@+id/shoeListFragment"
    android:label="@string/shoe_list_title"
    android:name="com.udacity.shoestore.screens.ShoeListingScreen" >
    <action
        android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
        app:destination="@id/shoeDetailFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    <action
        android:id="@+id/action_shoeListFragment_to_loginFragment"
        app:destination="@id/loginFragment"
        app:popUpTo="@id/loginFragment" />
</fragment>
<fragment
    android:id="@+id/shoeDetailFragment"
    android:label="@string/shoe_detail_title"
    android:name="com.udacity.shoestore.screens.ShoeDetailScreen">
    <action
        android:id="@+id/action_shoeDetailFragment_to_shoeListFragment"
        app:destination="@id/shoeListFragment"
        app:popUpTo="@id/shoeListFragment" />
</fragment>
</navigation>