<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.LoginScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingTop="50dp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        >

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="301dp"
            android:layout_height="641dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/shoes"
                tools:layout_editor_absoluteX="131dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/wight"
                tools:layout_editor_absoluteX="132dp"
                tools:layout_editor_absoluteY="150dp"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_input"
                style="@style/InputStyle"
                android:inputType="textEmailAddress" />

            <EditText
                style="@style/InputStyle"
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_input"
                android:inputType="textPassword" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLogin"
                    style="@style/ButtonStyle"
                    android:text="@string/login_btn" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonSignUp"
                    style="@style/ButtonStyle"
                    android:text="@string/signup_btn" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>