<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.InstructionOnboardingScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="@dimen/default_spacing_margin"
        android:paddingLeft="@dimen/default_spacing_margin"
        android:paddingRight="@dimen/default_spacing_margin">

        <ImageView
            android:id="@+id/instructions_image"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:layout_marginTop="@dimen/default_spacing_margin"
            app:srcCompat="@drawable/info_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_1"
            android:layout_marginTop="@dimen/default_spacing_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_2"
            android:layout_marginTop="@dimen/default_spacing_margin"/>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:padding="5dp"
            android:text="@string/letusgo"
            android:layout_margin="@dimen/default_spacing_margin"/>

    </LinearLayout>
</layout>
