<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.WelcomOnboardingScreen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="@dimen/default_spacing_margin"
        android:paddingLeft="@dimen/default_spacing_margin"
        android:paddingRight="@dimen/default_spacing_margin">

        <ImageView
            android:id="@+id/instructions_image"
            android:layout_height="100dp"
            android:layout_width="100dp"
            app:srcCompat="@drawable/instruction_icon"  />

        <TextView
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textFontWeight="800"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:layout_marginTop="@dimen/default_spacing_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_content"
            android:layout_margin="@dimen/default_spacing_margin"/>

        <Button

            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:text="@string/instructions"
            android:layout_margin="@dimen/default_spacing_margin"/>

    </LinearLayout>

</layout>